force-app/main/default/objects/ZRH_PrestadorPreferente__c/ZRH_PrestadorPreferente__c.object-meta.xml
<CustomObject>
    <label>Prestador Preferente</label>
    <nameField>
        <label>Descripción de Convenio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prestadores Preferentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>