force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_Codigo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Codigo__c</fullName>
    <label>Código</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>