force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_CodigoEstado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoEstado__c</fullName>
    <label>Código Estado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>