force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_DescripcionCorta__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DescripcionCorta__c</fullName>
    <label>Descripción Corta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>