force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_DescripcionEstado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DescripcionEstado__c</fullName>
    <label>Descripción Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>