force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_FechaAuditoria__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaAuditoria__c</fullName>
    <label>Fecha Auditoría</label>
    <type>Date</type>
</CustomField>