force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_GrupoDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GrupoDeNegocio__c</fullName>
    <label>Grupo de Negocio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>