force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_HoraAuditoria__c.field-meta.xml
<CustomField>
    <fullName>ZRH_HoraAuditoria__c</fullName>
    <label>Hora Auditoría</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>