force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_UsuarioAuditoria__c.field-meta.xml
<CustomField>
    <fullName>ZRH_UsuarioAuditoria__c</fullName>
    <label>Usuario Auditoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>