force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_VigenciaFinal__c.field-meta.xml
<CustomField>
    <fullName>ZRH_VigenciaFinal__c</fullName>
    <label>Vigencia Final</label>
    <required>true</required>
    <type>Date</type>
</CustomField>