force-app/main/default/objects/ZRH_PrestadorPreferente__c/fields/ZRH_VigenciaInicial__c.field-meta.xml
<CustomField>
    <fullName>ZRH_VigenciaInicial__c</fullName>
    <label>Vigencia Inicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>