force-app/main/default/objects/ZRH_PrestadorPreferente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ZRH_Codigo__c</columns>
    <columns>ZRH_VigenciaInicial__c</columns>
    <columns>ZRH_VigenciaFinal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Prestadores Preferentes</label>
</ListView>